<resources>
    <string name="app_name">Genesis Manager</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nuevo_evento">Crea un nuevo evento en el calendario</string>
    <string name="eventos">Eventos:</string>
    <string name="delete">Eliminar</string>
    <string name="_08_00">8:00</string>
    <string name="event_title">Titulo del Trabajo</string>
    <string name="event_details">Detalles del trabajo</string>
    <string name="tipo">Trabajos</string>
    <string name="notificar">Notificar</string>
    <string name="cancel">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="settings">Ajustes</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tipos_de_trabajo">Tipos de Trabajos</string>
    <string name="guardar">Guardar</string>
    <string name="agregar">Agregar</string>
    <string name="nuevo_tipo_de_trabajo">Nuevo tipo de Trabajo</string>
    <string name="trabajos">Trabajos</string>
</resources>