<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_gravity="center"
    android:background="@drawable/dialog_inset_bg"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:elevation="5dp"
        android:background="@drawable/round_corner_blank"
        android:orientation="vertical">

        <TextView
            android:text="@string/trabajos"
            android:gravity="center"
            android:fontFamily="@font/biotif_bold"
            android:textColor="@color/primero"
            android:textSize="19sp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:padding="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <Space
                    android:layout_weight="3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/hora_event"
                    android:gravity="center"
                    android:text="@string/_08_00"
                    android:layout_marginVertical="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/tercero"
                    android:background="@drawable/fecha_bg"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent" />

                <FrameLayout
                    android:layout_weight="1"
                    android:layout_marginVertical="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/fecha_bg">

                    <Spinner
                        android:id="@+id/pm_am"
                        tools:listitem="@layout/spinner_item"
                        android:backgroundTint="@color/tercero"
                        android:dropDownWidth="match_parent"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:spinnerMode="dropdown"
                        android:dropDownSelector="@color/tercero" />
                </FrameLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/dialog_event_title"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_gravity="center_vertical"
                android:background="@drawable/edit_text_bg"
                android:fontFamily="@font/biotif_medium"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:hint="@string/event_title"
                android:textColor="@color/middlegray"
                android:textColorHint="@color/gray1"
                android:textSize="18sp"
                android:autofillHints="name" />

            <EditText
                android:id="@+id/dialog_event_details"
                android:textColorHint="@color/gray1"
                android:fontFamily="@font/biotif_regular"
                android:textCursorDrawable="@drawable/cursor_drawable"
                android:background="@drawable/edit_text_bg"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:layout_height="150dp"
                android:paddingStart="5dp"
                android:layout_marginTop="10dp"
                android:paddingEnd="5dp"
                android:paddingTop="5dp"
                android:gravity="start"
                android:hint="@string/event_details"
                android:textColor="@color/middlegray"
                android:textSize="15sp"
                android:autofillHints="name" />


        </LinearLayout>

        <LinearLayout
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginVertical="5dp"
                android:layout_height="wrap_content"
                android:padding="7dp"
                android:backgroundTint="@color/decimo"
                android:background="@drawable/fecha_bg"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:textColor="@color/middlegray"
                    android:textSize="14sp"
                    android:fontFamily="@font/biotif_regular"
                    android:gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="3dp"
                    android:text="@string/tipo" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/fecha_bg">

                    <Spinner
                        android:id="@+id/event_priority"
                        tools:listitem="@layout/spinner_item"
                        android:backgroundTint="@color/tercero"
                        android:spinnerMode="dropdown"
                        android:dropDownSelector="@color/tercero"
                        android:dropDownWidth="match_parent"
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="1"
                android:layout_marginVertical="5dp"
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:paddingHorizontal="5dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:backgroundTint="@color/decimo"
                android:background="@drawable/fecha_bg"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/event_notificar"
                    android:layout_gravity="center"
                    android:fontFamily="@font/biotif_regular"
                    android:gravity="center"
                    android:buttonTint="@color/segundo"
                    android:text="@string/notificar"
                    android:textSize="13sp"
                    android:textColor="@color/middlegray"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancel_button"
                android:layout_weight="1"
                android:fontFamily="@font/biotif_bold"
                android:background="@drawable/round_corner_button_left"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/tercero"
                android:textStyle="bold"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/cancel" />

            <TextView
                android:id="@+id/ok_button"
                android:layout_weight="1"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:fontFamily="@font/biotif_bold"
                android:background="@drawable/round_corner_button_right"
                android:layout_gravity="center"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="@color/tercero"
                android:textStyle="bold"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/aceptar" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>