<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_margin="20dp"
        android:paddingTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipos_de_trabajo"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="17sp"
            android:fontFamily="@font/biotif_bold" />

        <ListView
            android:id="@+id/list_view"
            android:paddingStart="5dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="20dp"
            android:paddingEnd="5dp"
            tools:listitem="@layout/list_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/agregar"
            android:text="@string/agregar"
            android:textColor="@color/white"
            android:gravity="center"
            android:background="@drawable/dialog_btn"
            android:fontFamily="@font/biotif_medium"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button"
                android:text="@string/cancel"
                app:backgroundTint="@color/primero"
                android:inputType="textCapCharacters"
                android:textColor="@color/white"
                android:background="@drawable/dialog_btn"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--            <TextView-->
            <!--                android:id="@+id/cancel_button"-->
            <!--                android:text="@string/cancel"-->
            <!--                android:layout_weight="1"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:gravity="center"-->
            <!--                android:background="@drawable/dialog_btn"-->
            <!--                android:fontFamily="@font/biotif_medium"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_marginEnd="5dp"-->
            <!--                android:layout_marginStart="10dp"-->
            <!--                android:layout_marginVertical="10dp" />-->

            <Button
                android:id="@+id/guardar"
                android:text="@string/aceptar"
                android:textColor="@color/white"
                app:backgroundTint="@color/primero"
                android:background="@drawable/dialog_btn"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!--            <TextView-->
            <!--                android:id="@+id/guardar"-->
            <!--                android:layout_weight="1"-->
            <!--                android:text="@string/aceptar"-->
            <!--                android:textColor="@color/white"-->
            <!--                android:gravity="center"-->
            <!--                android:background="@drawable/dialog_btn"-->
            <!--                android:fontFamily="@font/biotif_medium"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="40dp"-->
            <!--                android:layout_marginStart="5dp"-->
            <!--                android:layout_marginEnd="10dp"-->
            <!--                android:layout_marginVertical="10dp" />-->
        </LinearLayout>
    </LinearLayout>

</FrameLayout>